# dlog

./: .editorconfig  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  CMakeSettings.json  CSUnitTest.sln  FileTree.py  Nuget.config  README.md  RELEASE.md  android  build-arm.bat  build-arm.sh  build-iOS.sh  build-vc14.bat  build.bat  build.py  build.sh  conanfile.py  conanfile.txt  creat-dev-iOS.sh  creat-dev-mac.sh  creat-dev.bat  create-dev.bat  dlog.sln  install-conan.bat  install.bat  linux86_to_arm  packages.config  requirements.txt  win_to_rpi
Artifacts/MD/x64/: dlog.exp  dlog.lib
Artifacts/MD/x86/: dlog.exp  dlog.lib
Artifacts/MT/x64/: dlog.lib  glog.lib
Artifacts/MT/x86/: dlog.lib  glog.lib
CSharp/Dll1/: Dll1.cpp
CSharp/Dll2/: Dll2.vcxproj.filters
CSharp/UnitTest/: DLog.cs  UnitTest.csproj  UnitTest.sln  UnitTest1.cs
CSharp/UnitTest/Properties/: AssemblyInfo.cs
Dll1/: Dll1.cpp  Dll1.vcxproj  Dll1.vcxproj.filters
Dll1/Debug/: vc141.idb
Dll2/: Dll2.cpp  Dll2.vcxproj
UTCpp/: CMakeLists.txt  DebugTest.cpp  MemoryLogTest.cpp  UTCpp.vcxproj  dlogTest.cpp  packages.config  test.cpp
UTCpp/x64/Debug/: vc141.idb
UTLinux/: CMakeLists.txt  main  main.cpp
UnitTest/: DLog.cs  UnitTest.csproj  UnitTest1.cs
UnitTest/Properties/: AssemblyInfo.cs
UnitTest1/: UnitTest1.vcxproj  unittest1.cpp
UnitTestCPPMT/: UnitTestCPPMT.vcxproj  test.cpp
WindowsFormsApp1/: DLog.cs  Form1.Designer.cs  Form1.cs  WindowsFormsApp1.csproj
WindowsFormsApp1/Properties/: AssemblyInfo.cs
dlog/: CMakeLists.txt  ReadMe.txt  dllmain.cpp  dlog.aps  dlog.cpp  dlog.h  dlog.rc  dlog.vcxproj  dlog.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h  targetver.h
dlog/Common/: Common.cpp  Common.h  Debug.cpp  Debug.h  FileHelper.cpp  FileHelper.h  GLogHelper.cpp  GLogHelper.h  MemoryLog.cpp  MemoryLog.h  stack_allocator.hpp
dlog/Debug/: dlog.res  vc140.idb  vc141.idb
dlog/Release/: dlog.res
dlog/lib/: glogMD.lib  glogMDD.lib  glogMT.lib  glogMTD.lib
profile/: VC2015_x64_MD  VC2015_x64_MT  VC2015_x86_MD  VC2015_x86_MT  VC2017_x64_MD  VC2017_x64_MT  VC2017_x86_MD  VC2017_x86_MT  gcc7.5_x64  gcc9.2_x64  iOS
sdk/glogBuild32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config.h  demangle_unittest.vcxproj  demangle_unittest.vcxproj.filters  glog-targets.cmake  glog.sln  glog.vcxproj  glog.vcxproj.filters  logging_unittest.vcxproj  logging_unittest.vcxproj.filters  signalhandler_unittest.vcxproj  signalhandler_unittest.vcxproj.filters  stacktrace_unittest.vcxproj  stacktrace_unittest.vcxproj.filters  stl_logging_unittest.vcxproj  stl_logging_unittest.vcxproj.filters  symbolize_unittest.vcxproj  (+3 more)
sdk/glogBuild32/Debug/: glogd.exp  glogd.lib
sdk/glogBuild32/Release/: glog.exp  glog.lib
sdk/glogBuild64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config.h  demangle_unittest.vcxproj  demangle_unittest.vcxproj.filters  glog-targets.cmake  glog.sln  glog.vcxproj  glog.vcxproj.filters  logging_unittest.vcxproj  logging_unittest.vcxproj.filters  signalhandler_unittest.vcxproj  signalhandler_unittest.vcxproj.filters  stacktrace_unittest.vcxproj  stacktrace_unittest.vcxproj.filters  stl_logging_unittest.vcxproj  stl_logging_unittest.vcxproj.filters  symbolize_unittest.vcxproj  (+3 more)
sdk/glogBuild64/Debug/: glogd.exp  glogd.ilk  glogd.lib
sdk/glogBuild64/Release/: glog.exp  glog.lib
sdk/vc141/x64/MD/Debug/: glogd.exp  glogd.lib
sdk/vc141/x64/MD/Release/: glog.exp
src/: CMakeLists.txt  CSUnitTest.sln
src/UnitTest/: UnitTest1.cs
src/dlog/: CMakeLists.txt  dllmain.cpp  dlog.cpp  dlog.h  dlog.rc  resource.h  stdafx.cpp  stdafx.h
src/dlog/Common/: Common.cpp  Common.h  Debug.cpp  Debug.h  FileHelper.cpp  FileHelper.h  JsonHelper.h  MemoryLog.cpp  MemoryLog.h  stack_allocator.hpp
src/test/: CMakeLists.txt  DebugTest.cpp  MemoryLogTest.cpp  PocoTest.cpp  dlogTest.cpp
test/: .clang-format  CMakeLists.txt  DebugTest.cpp  MemoryLogTest.cpp  UTCpp.vcxproj  dlogTest.cpp
test_package/: CMakeLists.txt  DebugTest.cpp  MemoryLogTest.cpp  PocoTest.cpp  conanfile.py  dlogTest.cpp  example.cpp  pch.h
tools/: DownloadLib.py  FileTree.py  ListFile.py  build.py
x64/Release/: dlog.exp  dlog.lib  glog.exp  glog.lib
